# zoem

./: .gitignore  AUTHORS  ChangeLog  DESIGN  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  TODO_DESIGN  VERSION  b2  bootstrap  build-zoem-21-322.sh  config.h.in  configure  configure.ac  configure.ac.in  install-this-zoem.sh  installzoem.sh  setversion
doc/: Makefile.am  Makefile.in  TODO  ecosphere.azm  zoem.azm  zoem.shared  zum.azm
examples/: 8q.azm  8q2.azm  8q2.ozm  Makefile.am  Makefile.in  README  catch.azm  catch.ozm  fib.azm  loop.azm  loop.ozm  meta.azm  meta.ozm  nest.azm  nest.ozm  power-of-2.azm  power-of-2.ozm  reverse.azm  reverse.ozm  scope.azm  scope.ozm  special.azm  special.ozm  stress.azm  stress.ozm  stress2.azm  stress2.reg  tr.azm  tr.ozm  txt-table.azm  txt-table.ozm  xml.azm  xml.ozm
shed/: Makefile.am  bootstrap  buildit  buildrelease  make  setversion
src/: Makefile.am  Makefile.in  curly.c  curly.h  dict.c  dict.h  digest.c  digest.h  entry.c  entry.h  filter.c  filter.h  iface.c  iface.h  key.c  key.h  op-format.c  op-format.h  op-inspect.c  op-inspect.h  ops-constant.c  ops-constant.h  ops-env.c  ops-env.h  ops-grape.c  ops-grape.h  ops-xtag.c  ops-xtag.h  ops.c  ops.h  parse.c  parse.h  read.c  read.h  segment.c  segment.h  sink.c  sink.h  source.c  source.h  (+6 more)
